--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
         Imersão Dev - Aula 09
     </title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="app/css.css">
 </head>
 
 <body>
@@ -33,6 +33,6 @@
         </form>
     </div>
 </body>
-<script src="java.js"></script>
+<script src="app/java.js"></script>
 
 </html>
